<resources>
    <string name="app_name">NeoSTORE</string>

    //Login page
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register_button_text">Don\'t have an account</string>

    //Register page
    <string name="register_page">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="agree_conditions">I agree the Terms and conditions</string>
    <string name="register_button">Register</string>

    //My Account page
    <string name="my_account_page">My Account</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="edit_profile_button">Edit profile</string>
    <string name="reset_password_button">Reset password</string>

    //Edit Profile page
    <string name="edit_profile_page">Edit Profile</string>
    <string name="submit_button">Submit</string>

    //Reset password Page
    <string name="reset_password_page">Reset Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>

    //Address List Page
    <string name="shipping_address">Shipping Address</string>
    <string name="place_order_button">Place Order</string>
    <string name="no_address_available">No addresses available</string>

    //Add Address page
    <string name="add_address_page">Add Address</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="zip_code">Zip code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="save_address_button">Save Address</string>
    <string name="address_type">Address Type</string>

    //Product List page
    <string name="table_page">Tables</string>
    <string name="sofa_page">Sofas</string>
    <string name="cupboard_page">Cupboards</string>
    <string name="chair_page">Chairs</string>

    //Product Details Page
    <string name="description">Description</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="buy_now_button">Buy Now</string>
    <string name="rate_button">Rate</string>

    //Rate Dialog
    <string name="rate_now_button">Rate Now</string>

    //Quantity Dialog
    <string name="enter_quantity">Enter Qty.</string>

    //My Order Page
    <string name="my_order_page">My Orders</string>
    <string name="no_order_available">No orders available now.</string>

    //Order Details Page
    <string name="total">Total</string>
    <string name="order_now_button">Order Now</string>

    //My Cart page
    <string name="my_cart_page">My Cart</string>
    <string name="cart_empty">Your cart is empty.</string>

    //Store Locator Page
    <string name="store_locator">Store Locator</string>
    <string name="address_title">Skyland Store</string>
    <string name="address_subtitle">6335 Edgewood Road Reisterstown,MD 21136</string>

    //Drawer
    <string name="logout_button">Logout</string>

    //App Messages
    <string name="error_occurred">Error occurred,Please try again.</string>
    <string name="address_added">Address has been added to your list</string>
    <string name="select_a_address">Please select a address before proceeding</string>
    <string name="success">Your action was successful</string>
    <string name="select_birthdate">Select a BirthDate</string>
    <string name="permanent_image_rejection">Hey,you have permanently rejected this app from accessing your storage</string>
    <string name="no_image_selected">You have not selected a image.Please select a image before proceeding.</string>
    <string name="search">Search</string>

    //Image content Description

    <string name="profile_image">Profile Picture</string>
    <string name="drawer_option_icon_image">Option icon</string>
    <string name="chair_image">Chair</string>
    <string name="table_image">Table</string>
    <string name="cupboard_image">Cupboard</string>
    <string name="sofa_image">Sofa</string>
    <string name="share_image">Share Button</string>
    <string name="map_image">Map</string>
    <string name="product_image">Product Image</string>

</resources>
