<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/red"

    tools:context=".views.RegisterPage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="100px"
            >
            <TextView
                android:layout_marginTop="200px"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="135px"
                android:fontFamily="@font/bold"
                android:textColor="@color/white"
                android:layout_marginBottom="148px"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameTextInput"
                app:startIconTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:layout_marginBottom="40px"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                style="@style/TextInputLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="54px"
                    android:inputType="text"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameTextInput"
                app:startIconTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:layout_marginBottom="40px"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                style="@style/TextInputLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="54px"
                    android:inputType="text"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInput"
                app:startIconTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                style="@style/TextInputLayoutStyle"
                android:layout_marginBottom="40px"
                app:hintTextColor="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="54px"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInput"
                app:startIconTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textColorHint="@color/white"
                style="@style/TextInputLayoutStyle"
                android:layout_marginBottom="40px"
                app:hintTextColor="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="54px"
                    android:inputType="textPassword"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordTextInput"
                app:startIconTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/white"
                style="@style/TextInputLayoutStyle"
                android:layout_marginBottom="40px"
                app:hintTextColor="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="54px"
                    android:inputType="textPassword"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginVertical="69px">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gender"
                    android:gravity="center"
                    android:fontFamily="@font/medium"
                    android:textSize="48px"
                    android:textColor="@color/white"
                    />
                <RadioGroup

                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/genderRadioGroup">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/white"
                        android:checked="false"
                        android:text="@string/male"
                        android:textColor="@color/white"
                        android:textSize="48px"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/white"
                        android:checked="false"
                        android:text="@string/female"
                        android:textColor="@color/white"
                        android:textSize="48px"
                        tools:ignore="TouchTargetSizeCheck" />
                </RadioGroup>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberTextInput"
                app:startIconTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:textColorHint="@color/white"
                style="@style/TextInputLayoutStyle"
                app:hintTextColor="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="54px"
                    android:inputType="phone"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40px"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/agreeConditionsCheckBox"
                    android:buttonTint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:text="@string/agree_conditions"
                    android:textColor="@color/white"
                    android:textSize="39px" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                app:cornerRadius="20px"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:letterSpacing="0"
                android:textAllCaps="true"
                android:layout_marginHorizontal="0px"
                android:textSize="78px"
                android:fontFamily="@font/medium"
                android:textColor="@color/button_text_color"
                android:backgroundTint="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>