<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/red"
    tools:context=".views.LoginPage">
    <FrameLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="40px">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="60px"
            >
            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="135px"
                android:fontFamily="@font/bold"
                android:textColor="@color/white"
                android:layout_marginBottom="148px"
                />
            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/username_icon"
                android:id="@+id/usernameTextInput"
                app:startIconTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginBottom="40px"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                style="@style/TextInputLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="54px"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/cpassword_icon"
                android:id="@+id/passwordTextInput"
                app:startIconTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textColorHint="@color/white"
                style="@style/TextInputLayoutStyle"
                app:hintTextColor="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="54px"
                    android:inputType="textPassword"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                app:cornerRadius="20px"
                android:layout_marginTop="100px"
                android:padding="10dp"
                android:letterSpacing="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:textAllCaps="true"
                android:layout_marginHorizontal="0px"
                android:textSize="78px"
                android:fontFamily="@font/medium"
                android:textColor="@color/button_text_color"
                android:backgroundTint="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="54px"
                android:fontFamily="@font/medium"
                android:layout_marginTop="64px"/>

        </LinearLayout>
        <LinearLayout
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button_text"
                android:textAllCaps="true"
                android:textSize="48px"
                android:fontFamily="@font/medium"
                android:textColor="@color/white"
                />
            <ImageButton
                android:src="@drawable/add_icon"
                android:id="@+id/registerButton"
                android:layout_width="138px"
                android:layout_height="138px"
                android:backgroundTint="@color/crimson"
                android:fontFamily="@font/medium"
                />
        </LinearLayout>
    </FrameLayout>
    <include
        android:id="@+id/loadingScreen"
        layout="@layout/loading_screen"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
