<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ResetPasswordPage">

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="100px"
        android:background="@color/red">
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="135px"
            android:fontFamily="@font/bold"
            android:textColor="@color/white"
            android:layout_marginVertical="148px"
            />
        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/cpassword_icon"
            android:id="@+id/currentPasswordTextInput"
            app:startIconTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:textColorHint="@color/white"
            style="@style/TextInputLayoutStyle"
            app:hintTextColor="@color/white"
            android:layout_marginBottom="40px"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="54px"
                android:inputType="textPassword"
                android:fontFamily="@font/medium"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/cpassword_icon"
            android:id="@+id/newPasswordTextInput"
            app:startIconTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:textColorHint="@color/white"
            style="@style/TextInputLayoutStyle"
            app:hintTextColor="@color/white"
            android:layout_marginBottom="40px"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="54px"
                android:inputType="textPassword"
                android:fontFamily="@font/medium"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/cpassword_icon"
            android:id="@+id/confirmPasswordTextInput"
            app:startIconTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/white"
            style="@style/TextInputLayoutStyle"
            app:hintTextColor="@color/white"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="54px"
                android:inputType="textPassword"
                android:fontFamily="@font/medium"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetPasswordButton"
            app:cornerRadius="20px"
            android:layout_marginTop="60px"
            android:padding="10dp"
            android:letterSpacing="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_button"
            android:textAllCaps="true"
            android:textSize="51px"
            android:fontFamily="@font/medium"
            android:textColor="@color/button_text_color"
            android:backgroundTint="@color/white"
            />

    </LinearLayout>
    <include
        android:id="@+id/loadingScreen"
        layout="@layout/loading_screen"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
